--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -67,7 +67,7 @@
 
         <div class="row">
             <div class="col s12 m4 l2">
-                <img src="template.png" class="logo">
+                <img src="countdown.png" class="logo">
             </div>
         </div>
 
@@ -75,17 +75,41 @@
 
         <!-- For example columns with settings: -->
         <div class="row">
-            <div class="col s6 input-field">
-                <input type="checkbox" class="value" id="option1" />
-                <label for="option1" class="translate">option1</label>
-            </div>
-
-            <div class="col s6 input-field">
-                <input type="text" class="value" id="option2" />
-                <label for="option2" class="translate">option2</label>
+            <div class="input-field col s12 m6 l5">
+                <input class="value" type="number" min="100" id="updateInterval"/>
+                <label for="updateInterval" class="translate">Update interval: </label>
+                <span class="translate">ms</span>
             </div>
         </div>
-
+        <div class="row">
+            <div class="col s12" id="values">
+                <span style="font-size: larger;" class="translate">Add rule: </span><a class="btn-floating waves-effect waves-light blue table-button-add"><i class="material-icons">add</i></a>
+                <div class="table-values-div">
+                    <table class="table-values">
+                        <thead>
+                        <tr>
+                            <th data-name="_index"     style="width: 30px"></th>
+                            <th data-name="name"       style="width: 110px" data-style="width: 110px" class="translate">Name</th>
+                            <!--th data-name="read"      style="width: 50px" data-type="checkbox" class="translate" data-def="true">Read</th-->
+                            <!--th data-name="write"     style="width: 50px" data-type="checkbox" class="translate">Write</th-->
+                            <th data-name="link"       style="width: 30%" class="translate">URL or file name</th>
+                            <th data-name="regex"      style="width: 150px"  data-style1="width: 150px" class="translate">RegEx</th>
+                            <th data-name="item"       style="width: 150px"  data-style="width: 40px" data-type="number" class="translate">Item</th>
+                            <th data-name="role"       style="width: 70px"  data-style1="width: 70px" data-type="select" data-def="state" data-options="state/default;/custom;temperature;value;blinds;switch;indicator" class="translate">Role</th>
+                            <th data-name="type"       style="width: 70px"  data-style1="width: 70px" data-type="select" data-def="boolean" data-options="boolean;number;commaNumber;string;json" class="translate">Type</th>
+                            <th data-name="unit"       style="width: 60px"  data-style="width: 60px" class="translate">Unit</th>
+                            <th data-name="substituteOld" style="width: 60px"  data-type="checkbox" data-style="width: 40px" class="translate">Old</th>
+                            <th data-name="substitute" style="width: 60px"  data-style="width: 60px" class="translate">Subs</th>
+                            <th data-name="factor"     style="width: 60px"  data-style="width: 60px" class="translate" data-def="1">Factor</th>
+                            <th data-name="offset"     style="width: 60px"  data-style="width: 60px" class="translate" data-def="0">Offset</th>
+                            <th data-name="interval"   style="width: 60px"  data-style="width: 60px" class="translate translateT" title="Leave it empty if default interval is desired">Interval</th>
+                            <th data-buttons="edit up down delete copy"></th>
+                        </tr>
+                        </thead>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
