--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -89,12 +89,12 @@
                         <thead>
                         <tr>
                             <th data-name="_index"     style="width: 30px"></th>
-                            <th data-name="Name"       style="width: 110px" data-style="width: 110px" class="translate">Name</th>
-                            <th data-name="Minute"       style="width: 150px"  data-style="width: 40px" data-type="number" class="translate">Item</th>
-                            <th data-name="Hour"       style="width: 150px"  data-style="width: 40px" data-type="number" class="translate">Item</th>
-                            <th data-name="Day"       style="width: 150px"  data-style="width: 40px" data-type="number" class="translate">Item</th>
-                            <th data-name="Month"       style="width: 150px"  data-style="width: 40px" data-type="number" class="translate">Item</th>
-                            <th data-name="Year"       style="width: 150px"  data-style="width: 40px" data-type="number" class="translate">Item</th>
+                            <th data-name="Name"       style="width: 200px" data-style="width: 110px" class="translate">Name</th>
+                            <th data-name="Minute"       style="width: 150px"  data-style="width: 40px" data-type="number" class="translate">Minute</th>
+                            <th data-name="Hour"       style="width: 150px"  data-style="width: 40px" data-type="number" class="translate">Hour</th>
+                            <th data-name="Day"       style="width: 150px"  data-style="width: 40px" data-type="number" class="translate">Day</th>
+                            <th data-name="Month"       style="width: 150px"  data-style="width: 40px" data-type="number" class="translate">Month</th>
+                            <th data-name="Year"       style="width: 150px"  data-style="width: 40px" data-type="number" class="translate">Year</th>
                         </tr>
                         </thead>
                     </table>
